--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ body {
 .wrapperContainer--img {
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 .imgContainer {
@@ -135,6 +136,7 @@ body {
         flex-direction: column;
         padding: 10px;
         gap: var(--fontsize-1);
+
     }
 
     .contentContainer--heading {
@@ -150,7 +152,13 @@ body {
 }
 
 
-.teste{
-    background-color: var(--color-softviolet);
-    opacity: 0;
+.wrapperContainer--img__purple {
+    background-color: hsl(277, 64%, 61%);
+    /* opacity: 0; */
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    opacity: .6;
+    border-radius: 0px var(--fontsize-2) var(--fontsize-2) 0px;
 }
+
